# OtterWorks_CircuitPython_DRV8305

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.rst  otterworks_drv8305.py  setup.cfg  setup.py
.github/workflows/: publish-to-pypi.yml
examples/: chip_select_test.py  drv8305_log.py  drv8305_monitor_on_bbblack_spi0.py  drv8305_monitor_on_bbblack_spi1.py  drv8305_on_bbblack_spi1.py  drv8305_simpletest.py
systemd/: drv8305monitor.service
test/: sizeof.py
