[metadata]
name = otterworks-circuitpython-drv8305
version = 0.0.2
description = CircuitPython library for the Texas Instruments DRV8305 Three-Phase Gate Driver
long_description = file: README.rst
keywords = otterworks, drv8305, hardware, circuitpython, beaglebone
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries
    Topic :: System :: Hardware
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[options]
zip_safe = False
include_package_data = True
py_modules = otterworks_drv8305
install_requires =
    Adafruit-Blinka
    adafruit-circuitpython-busdevice

[options.package_data]
* = *.txt, *.rst, *.md
